--- a/public/sigma/category/process_creation.yaml
+++ b/public/sigma/category/process_creation.yaml
@@ -10,7 +10,7 @@ detection_category: process_creation
 detection_type: sigma
 contributors:
   - SecurityOnionSolutions
-date: 2025-05-29
+created: 2025-05-29
 questions:
 
   - question: What was the exact process execution that triggered the alert?
