--- a/securityonion-normalized/nids/category/et-scan.yaml
+++ b/securityonion-normalized/nids/category/et-scan.yaml
@@ -15,7 +15,7 @@ detection_category: 'ET SCAN'
 detection_type: nids
 contributors:
   - SecurityOnionSolutions
-date: 2025-04-28
+created: 2025-04-28
 modified: 2025-04-28
 questions:
 
