--- a/securityonion-normalized/nids/engine/engine_nids.yaml
+++ b/securityonion-normalized/nids/engine/engine_nids.yaml
@@ -8,7 +8,7 @@ detection_category: ''
 detection_type: nids
 contributors:
   - SecurityOnionSolutions
-date: 2025-03-12
+created: 2025-03-12
 modified: 2025-03-13
 questions:
   - question: 'What specifically does the alert describe?'
