--- a/securityonion-normalized/sigma/category/file_event.yaml
+++ b/securityonion-normalized/sigma/category/file_event.yaml
@@ -9,7 +9,7 @@ detection_category: file_event
 detection_type: sigma
 contributors:
   - SecurityOnionSolutions
-date: 2025-05-29
+created: 2025-05-29
 
 questions:
 
