--- a/securityonion-normalized/sigma/engine/engine_sigma.yaml
+++ b/securityonion-normalized/sigma/engine/engine_sigma.yaml
@@ -8,7 +8,7 @@ detection_category: ''
 detection_type: sigma
 contributors:
   - 'SecurityOnionSolutions'
-date: 2025-03-28
+created: 2025-03-28
 modified: 2025-04-23
 questions:
   - question: 'Are there any other alerts associated with the internal system?'
