--- a/public/sigma/category/process_creation.yaml
+++ b/public/sigma/category/process_creation.yaml
@@ -6,11 +6,12 @@ description: |
   Process creation alerts can range from legitimate administrative tools to known malware execution.
 type: detection
 detection_id: ''
-detection_category: ''
+detection_category: 'process_creation'
 detection_type: sigma
 contributors:
 - SecurityOnionSolutions
 created: 2025-05-29
+modified: 2025-06-24
 questions:
 - question: What was the exact process execution that triggered the alert?
   context: |
