--- a/public/sigma/category/file_event.yaml
+++ b/public/sigma/category/file_event.yaml
@@ -1,15 +1,16 @@
 name: Sigma - Category - file_event
 id: 1600005
 description: |
-  Baseline Playbook for process creation events, OS agnostic.
+  Baseline Playbook for file events, OS agnostic.
   File events can indicate persistence mechanisms, data staging, malware drops, or legitimate software operations.
 type: detection
 detection_id: ''
-detection_category: ''
+detection_category: 'file_event'
 detection_type: sigma
 contributors:
 - SecurityOnionSolutions
 created: 2025-05-29
+modified: 2025-06-24
 questions:
 - question: What file creation event triggered this alert?
   context: |
