--- a/public/nids/category/et-dyndns.yaml
+++ b/public/nids/category/et-dyndns.yaml
@@ -4,30 +4,13 @@ description: |
   This playbook is designed to help investigate alerts from the ET DYN_DNS category, which focuses on detecting the use of dynamic DNS services. These services (including No-IP, DynDNS, and others) allow users to map domains to changing IP addresses. While they have legitimate uses such as hosting game servers, remote access solutions, and home labs, they are frequently abused by threat actors for malicious purposes including C2 infrastructure, phishing sites, and malware distribution. The rules in this category detect both DNS queries and HTTP requests to known dynamic DNS providers, as well as specific client software associated with these services.
 type: detection
 detection_id: ''
-detection_category: ''
+detection_category: 'ET DYN_DNS'
 detection_type: nids
 contributors:
 - SecurityOnionSolutions
 created: 2025-04-30
 modified: 2025-04-30
 questions:
-- question: Is this dynamic DNS domain associated with any known threat intelligence?
-  context: dynamic DNS domains used for malicious purposes are often tracked in threat intelligence feeds.
-  answer_sources:
-  - threatintel
-  query: |
-    aggregation: false
-    logsource:
-      category: threatintel
-    detection:
-        selection:
-            indicator|contains|expand: '%dns.query.name%'
-        condition: selection
-    fields:
-        - indicator
-        - threat_type
-        - confidence
-        - source
 - question: What is the historical DNS resolution pattern for this domain?
   context: Understanding how frequently the IP resolution changes can indicate potential malicious behavior.
   answer_sources:
@@ -67,6 +50,7 @@ questions:
   context: Identifying the processes making these DNS queries can help determine if they are legitimate or potentially malicious.
   answer_sources:
   - network
+  range: -24h
   query: |
     aggregation: false
     logsource:
