--- a/public/nids/category/et-scan.yaml
+++ b/public/nids/category/et-scan.yaml
@@ -11,7 +11,7 @@ description: |
   These rules help identify both targeted reconnaissance and broader network scanning campaigns that could indicate preparation for more focused attacks.
 type: detection
 detection_id: ''
-detection_category: ''
+detection_category: 'ET SCAN'
 detection_type: nids
 contributors:
 - SecurityOnionSolutions
