--- a/securityonion-normalized/nids/individual/2103200.yaml
+++ b/securityonion-normalized/nids/individual/2103200.yaml
@@ -14,7 +14,7 @@ questions:
   - question: What was the complete UDP payload that triggered this WINS overflow detection?
     context: Reveals the specific byte patterns and content that matched the overflow signature.
     range: +/-15m
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
@@ -49,7 +49,7 @@ questions:
   - question: What external hosts are sending UDP traffic to port 42 on internal systems?
     context: Identifies potential sources of WINS scanning or exploitation attempts.
     range: +/-30m
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
@@ -69,7 +69,7 @@ questions:
   - question: Are other internal hosts receiving similar UDP traffic on port 42?
     context: Determines scope of potential WINS-targeted scanning or exploitation.
     range: +/-2h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
@@ -112,7 +112,7 @@ questions:
   - question: Are there other UDP services being targeted by the same source?
     context: Identifies broader UDP service scanning or exploitation attempts.
     range: +/-2h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
@@ -132,7 +132,7 @@ questions:
   - question: Did any processes on the target host exhibit unusual activity after this traffic?
     context: Assesses whether the WINS overflow attempt resulted in process execution.
     range: +30m
-    query:
+    query: |
       aggregation: false
       logsource:
         category: process_creation
