--- a/public/nids/individual/2028976.yaml
+++ b/public/nids/individual/2028976.yaml
@@ -81,7 +81,7 @@ questions:
   - question: What PowerShell processes were executed after receiving this payload?
     context: Identifies PowerShell execution that may have resulted from the exploit kit.
     range: +30m
-    query:
+    query: |
       aggregation: false
       logsource:
         category: process_creation
@@ -267,7 +267,7 @@ questions:
   - question: Did this host attempt to download other suspicious image files masking payloads?
     context: Identifies additional exploit attempts using similar JPEG masquerading techniques.
     range: +/-6h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
