--- a/public/nids/individual/2039743.yaml
+++ b/public/nids/individual/2039743.yaml
@@ -152,7 +152,7 @@ questions:
   - question: Did this host access other suspicious domains with similar patterns?
     context: Reveals broader phishing infrastructure targeting banking credentials.
     range: +/-6h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
@@ -172,7 +172,7 @@ questions:
   - question: Were any banking or financial applications accessed from this host?
     context: Determines if legitimate banking activity occurred alongside the phishing attempt.
     range: +/-4h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
