--- a/public/nids/individual/2049408.yaml
+++ b/public/nids/individual/2049408.yaml
@@ -221,7 +221,7 @@ questions:
   - question: Are other hosts showing the same JynxLoaderV2 user-agent pattern?
     context: Identifies additional infected systems using the same malware variant.
     range: +/-24h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
