--- a/public/nids/individual/2062568.yaml
+++ b/public/nids/individual/2062568.yaml
@@ -250,7 +250,7 @@ questions:
   - question: What other domains resolved to the same IP infrastructure as cvzco.run?
     context: Identifies related domains in the Lumma Stealer infrastructure.
     range: +/-24h
-    query:
+    query: |
       logsource:
         category: network
         service: dns
@@ -270,7 +270,7 @@ questions:
   - question: Did this host access any cryptocurrency-related services or wallets?
     context: Lumma Stealer targets cryptocurrency wallets and browser-stored credentials.
     range: +/-6h
-    query:
+    query: |
       logsource:
         category: network
         service: ssl
