--- a/public/nids/individual/2062950.yaml
+++ b/public/nids/individual/2062950.yaml
@@ -108,7 +108,7 @@ questions:
   - question: What IP addresses did the Predator domain resolve to?
     context: Identifies the infrastructure hosting the spyware command and control servers.
     range: +/-30m
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
@@ -189,7 +189,7 @@ questions:
   - question: Are there other DNS queries to domains with similar patterns or hosting infrastructure?
     context: Identifies additional Predator infrastructure or related spyware campaigns.
     range: +/-24h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
