--- a/securityonion-normalized/nids/individual/2019876.yaml
+++ b/securityonion-normalized/nids/individual/2019876.yaml
@@ -14,7 +14,7 @@ questions:
   - question: What was the exact SSH version string used in this connection?
     context: Reveals the specific version identifier that may indicate a brute force tool.
     range: +/-15m
-    query:
+    query: |
       logsource:
         category: network
         service: connection
@@ -45,7 +45,7 @@ questions:
   - question: How many SSH connection attempts occurred from this source IP?
     context: Identifies potential brute force patterns through connection frequency analysis.
     range: +/-30m
-    query:
+    query: |
       logsource:
         category: network
         service: connection
@@ -61,7 +61,7 @@ questions:
   - question: What other SSH servers is this source IP targeting?
     context: Reveals the scope of SSH scanning or brute force activity.
     range: +/-2h
-    query:
+    query: |
       logsource:
         category: network
         service: connection
@@ -92,7 +92,7 @@ questions:
   - question: What other services is this source IP attempting to access?
     context: Identifies additional reconnaissance or scanning activity from the same source.
     range: +/-2h
-    query:
+    query: |
       logsource:
         category: network
         service: connection
@@ -110,7 +110,7 @@ questions:
   - question: Did any SSH authentication attempts succeed from this source?
     context: Assesses whether brute force attempts resulted in successful access.
     range: +2h
-    query:
+    query: |
       logsource:
         category: authentication
       detection:
@@ -126,7 +126,7 @@ questions:
   - question: What geographic location is associated with this source IP?
     context: Provides context about the origin of the SSH scanning activity.
     range: +/-15m
-    query:
+    query: |
       logsource:
         category: network
         service: connection
