--- a/securityonion-normalized/nids/individual/2023510.yaml
+++ b/securityonion-normalized/nids/individual/2023510.yaml
@@ -89,7 +89,7 @@ questions:
   - question: Were any SSH-related files created or modified on the Redis server?
     context: Determines if the Redis exploitation successfully wrote SSH keys to the filesystem.
     range: +1h
-    query:
+    query: |
       logsource:
         category: file_event
       detection:
@@ -131,7 +131,7 @@ questions:
   - question: Did any SSH login attempts occur after the Redis configuration commands?
     context: Assesses whether SSH key installation was followed by authentication attempts.
     range: +2h
-    query:
+    query: |
       logsource:
         category: network
         service: connection
@@ -171,7 +171,7 @@ questions:
   - question: Were any Redis persistence mechanisms configured during this session?
     context: Determines if attackers attempted to persist data or configuration changes.
     range: +/-30m
-    query:
+    query: |
       logsource:
         category: network
         service: connection
