--- a/securityonion-normalized/nids/individual/2026474.yaml
+++ b/securityonion-normalized/nids/individual/2026474.yaml
@@ -246,7 +246,7 @@ questions:
   - question: Are there alerts related to cryptocurrency mining from this host?
     context: Correlates with mining pool connections or resource consumption alerts.
     range: +24h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: alert
