--- a/securityonion-normalized/nids/individual/2051533.yaml
+++ b/securityonion-normalized/nids/individual/2051533.yaml
@@ -44,7 +44,7 @@ questions:
 - question: What process initiated the DNS query to javascrip12.com?
   context: Identifies the application or process responsible for the suspicious domain resolution.
   range: +/-15m
-  query:
+  query: |
     service: process_initiated_connection
 - question: What DNS queries occurred before this FakeExt C2 domain lookup?
   context: Reveals the sequence of DNS activity that preceded the malicious domain query.
