--- a/securityonion-normalized/nids/individual/2051578.yaml
+++ b/securityonion-normalized/nids/individual/2051578.yaml
@@ -164,7 +164,7 @@ questions:
   - question: What IP addresses did edurestunningcrackyow.fund resolve to?
     context: Reveals the C2 infrastructure IP addresses for broader threat hunting.
     range: +/-1h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
@@ -233,7 +233,7 @@ questions:
   - question: Did this host query other domains with similar naming patterns?
     context: Reveals additional C2 infrastructure that may be part of the same campaign.
     range: +/-6h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
