--- a/securityonion-normalized/nids/individual/2101980.yaml
+++ b/securityonion-normalized/nids/individual/2101980.yaml
@@ -14,7 +14,7 @@ questions:
   - question: What was the complete UDP packet content that triggered this alert?
     context: Reveals the specific payload pattern matching DeepThroat communication protocol.
     range: +/-15m
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
@@ -207,7 +207,7 @@ questions:
   - question: What is the pattern of UDP traffic to port 2140 from this host?
     context: Analyzes communication timing and frequency for remote access tool behavior.
     range: +/-6h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: network
@@ -226,7 +226,7 @@ questions:
   - question: Were any files accessed or modified by processes around the time of this connection?
     context: Identifies potential data access or system modification by remote access tools.
     range: +/-1h
-    query:
+    query: |
       aggregation: false
       logsource:
         category: file_event
