--- a/scripts/patterns_sigma.yaml
+++ b/scripts/patterns_sigma.yaml
@@ -22,3 +22,5 @@
 "%src_ip%": "{source.ip}"
 "%dst_ip%": "{destination.ip}"
 "%User%": "{event_data.user.name}"
+"%event_data.source.ip%": "{event_data.source.ip}"
+
