Add additional vars

--- a/public/nids/individual/2048777.yaml
+++ b/public/nids/individual/2048777.yaml
@@ -186,8 +186,6 @@ questions:
         category: network
         service: dns
       detection:
-        ip_selection:
-          dns.resolved_ip|expand: '%resolved_ip%'
         domain_selection:
           src_ip|expand: '%src_ip%'
           dns.query.name|contains:
@@ -195,7 +193,7 @@ questions:
             - "helpdesk"
             - "support"
             - "assist"
-        condition: ip_selection or domain_selection
+        condition: domain_selection
       fields:
         - dns.query.name
         - dns.resolved_ip
