--- a/scripts/validation_pipeline.yaml
+++ b/scripts/validation_pipeline.yaml
@@ -5,9 +5,9 @@ vars:
   document_id:
    - '{soc_id}'
   hostname:
-   - '{event_data.host.name}'
+   - '{host.name}'
   ProcessGuid:
-   - '{event_data.process.entity_id}'
+   - '{process.entity_id}'
   User:
    - '{user.name}'
   private_ip:
@@ -15,11 +15,11 @@ vars:
   public_ip:
    - '{network.public.ip}'   
   related_ip:
-   - '{event_data.related.ip}'
+   - '{related.ip}'
   related.hosts:
-   - '{event_data.related.hosts'
+   - '{related.hosts'
   CurrentDirectory:
-   - '{event_data.process.working_directory}'
+   - '{process.working_directory}'
   ParentProcessGuid:
    - '{ParentProcessGuid}'
   Image:
@@ -34,6 +34,12 @@ vars:
    - '{destination.port}'
   src_port:
    - '{source.port}'
+  TargetFilename:
+   - '{file.path}'
+  resolved_ip:
+   - '{dns.resolved_ip}'
+  CommandLine:
+   - '{process.command_line}'
 transformations:
     - type: value_placeholders
       include:
@@ -52,3 +58,6 @@ transformations:
         - 'src_ip'
         - 'dst_ip'
         - 'dst_port'
+        - 'TargetFilename'
+        - 'resolved_ip'
+        - 'CommandLine'
