--- a/public/nids/individual/2023453.yaml
+++ b/public/nids/individual/2023453.yaml
@@ -3,7 +3,7 @@ id: 1249996
 description: |
   Detects short UDP communications with specific payload patterns consistent with Cerber ransomware checkin activity.
   May trigger on legitimate applications using similar UDP communication patterns or network protocols with short hexadecimal payloads.
-type: data_exfiltration
+type: detection
 detection_id: 2023453
 detection_category: ''
 detection_type: nids
