Change detection image filter to use 'endswith'

--- a/securityonion-normalized/nids/individual/2013414.yaml
+++ b/securityonion-normalized/nids/individual/2013414.yaml
@@ -160,11 +160,11 @@ questions:
       detection:
         selection:
           host.ip: '{network.private_ip}'
-          Image|contains:
-          - *.exe
-          - *.dll
-          - *.scr
-          - *.com
+          Image|endswith:
+          - .exe
+          - .dll
+          - .scr
+          - .com
         condition: selection
       fields:
         - User
